@@ -37,6 +37,7 @@ All (GUI):
 - Send events when toggling wxPropertyGrid nodes from keyboard (Armel Asselin).
 - Fix wxRearrangeList::Check() which asserted and misbehaved before.
 - Optimized wxRTC insertion and deletion when floating objects are present.
+- Added on-demand image loading option to wxRTC.
 
 wxGTK:
 
